# electionguard-python

./: .gitignore  Dockerfile  Makefile  README.md  arion-compose.nix  docker-build.sh  docker-dev.sh  docker-shell.sh  docker-test.sh  flake.nix  makefile-docker-env.sh  progress.txt  pyproject.toml  test-config.json
docs/: 0_Configure_Election.html  index.md
src/electionguard/: __init__.py  ballot.py  byte_padding.py  constants.py  decryption.py  decryption_mediator.py  discrete_log.py  election_polynomial.py  encrypt.py  guardian.py  hmac.py  key_ceremony.py  key_ceremony_mediator.py  manifest.py  serialize.py  tally.py  utils.py
src/electionguard_cli/cli_steps/: tally_step.py
src/electionguard_gui/: Dockerfile  containers.py
src/electionguard_gui/components/: guardian_home_component.py  key_ceremony_details_component.py  upload_ballots_component.py  view_decryption_component.py
src/electionguard_gui/models/: decryption_dto.py  key_ceremony_dto.py
src/electionguard_gui/services/: decryption_service.py  eel_log_service.py  election_service.py  export_service.py  key_ceremony_service.py  plaintext_ballot_service.py
src/electionguard_gui/services/decryption_stages/: decryption_s1_join_service.py  decryption_s2_announce_service.py  decryption_stage_base.py
src/electionguard_gui/services/key_ceremony_stages/: key_ceremony_s6_publish_key_service.py  key_ceremony_stage_base.py
src/electionguard_tools/factories/: ballot_factory.py  election_factory.py
src/electionguard_tools/helpers/: tally_ceremony_orchestrator.py
stubs/: gmpy2.pyi
tests/: conftest.py
tests/integration/: test_end_to_end_election.py
tests/property/: test_decrypt_with_secrets.py  test_encrypt.py  test_nonces.py  test_schnorr.py
tests/unit/electionguard_gui/: test_decryption_dto.py
