[tool.black]
target-version = ['py39']

[tool.pylint.basic]
extension-pkg-whitelist = "pydantic"

[tool.pylint.format]
max-line-length = 120

# FIXME: Pylint should not require this many exceptions
[tool.pylint.messages_control]
disable = '''
  duplicate-code,
  fixme,
  invalid-name,
  missing-module-docstring,
  missing-function-docstring,
  no-value-for-parameter,
  redefined-builtin,
  too-few-public-methods,
  too-many-arguments,
  too-many-branches,
  too-many-function-args,
  too-many-lines,
  too-many-locals,
  too-many-nested-blocks,
  unnecessary-lambda,
  '''

[tool.coverage.run]
branch = true
source = ["src/electionguard"]

[tool.coverage.html]
directory = "coverage_html_report"

[tool.mypy]
python_version = 3.9
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
show_column_numbers = true

[project]
name = "electionguard"
version = "1.4.0"
description = "ElectionGuard: Support for e2e verified elections."
requires-python = ">=3.9.5,<4.0.0"
dependencies = [
    "gmpy2 (>=2.0.8,<3.0.0)",
    "psutil (>=5.7.2)",
    "pydantic (==1.9.0)",
    "click (>=8.1.0,<9.0.0)",
    "dacite (>=1.6.0,<2.0.0)",
    "python-dateutil (>=2.8.2,<3.0.0)",
    "types-python-dateutil (>=2.8.14,<3.0.0)",
    "Eel[jinja2] (>=0.14.0,<0.15.0)",
    "pymongo (>=4.1.1,<5.0.0)",
    "dependency-injector (>=4.39.1,<5.0.0)",
    "pytest-mock (>=3.8.2,<4.0.0)",
    "packaging (==22)",
    "bottle-websocket>=0.2.9",
]
readme = "README.md"

[[project.authors]]
name = "Microsoft "
email = "electionguard@microsoft.com"

[project.optional-dependencies]
dev = ["atomicwrites", "black (==22.3.0)", "coverage", "docutils", "hypothesis (>=5.15.1)", "ipython (>=7.31.1,<8.0.0)", "ipykernel (>=6.4.1,<7.0.0)", "jeepney", "jupyter-black (>=0.3.1,<0.4.0)", "mkdocs (>=1.3.0,<2.0.0)", "mkdocs-jupyter (>=0.20.1,<0.21.0)", "mkinit (>=0.3.3,<0.4.0)", "mypy (>=0.910,<0.911)", "pydeps", "pylint", "pytest", "secretstorage", "twine", "typish"]

[project.scripts]
eg = "electionguard_cli.start:cli"
egui = "electionguard_gui.start:run"
