[project]
name = "electionguard"
version = "1.4.0"
requires-python = ">=3.9.5,<4.0.0"
description = "ElectionGuard: Support for e2e verified elections."
license = "MIT"
authors = [{"name" = "Microsoft", "email" = "electionguard@microsoft.com"}]
maintainers = []
readme = "README.md"
keywords = []
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Topic :: Utilities"
]
dependencies = [
  "gmpy2>=2.0.8,<3.0.0",
  "psutil>=5.7.2",
  "pydantic==2.13.0",
  "click>=8.1.0,<9.0.0",
  "dacite>=1.6.0,<2.0.0",
  "python-dateutil>=2.8.2,<3.0.0",
  "types-python-dateutil>=2.8.14,<3.0.0",
  "Eel[jinja2]>=0.14.0,<1.0.0",
  "pymongo>=4.1.1,<5.0.0",
  "dependency-injector>=4.39.1,<5.0.0",
  "pytest-mock>=3.8.2,<4.0.0",
]

[project.urls]
homepage = "https://microsoft.github.io/electionguard-python"
repository = "https://github.com/microsoft/electionguard-python"
documentation = "https://microsoft.github.io/electionguard-python"
"GitHub Pages" = "https://microsoft.github.io/electionguard-python"
"Read the Docs" = "https://electionguard-python.readthedocs.io"
"Releases" = "https://github.com/microsoft/electionguard-python/releases"
"Milestones" = "https://github.com/microsoft/electionguard-python/milestones"
"Issue Tracker" = "https://github.com/microsoft/electionguard-python/issues"

[tool.poetry]
packages = [
  { include = "electionguard", from = "src" },
  { include = "electionguard_tools", from = "src" },
  { include = "electionguard_cli", from = "src" },
  { include = "electionguard_gui", from = "src" },
]

[tool.poetry.group.dev.dependencies]
atomicwrites = "*"
black = "25.11.0"
coverage = "*"
docutils = "*"
hypothesis = ">=5.15.1"
ipython = "^7.31.1"
ipykernel = "^6.4.1"
jeepney = "*"
jupyter-black = "^0.3.1"
mkdocs = "^1.6.1"
mkdocs-jupyter = "^0.26.2"
mkinit = "^0.3.3"
mypy = "1.19.1"
pydeps = "*"
pylint = "*"
pytest = "*"
secretstorage = "*"
twine = "*"
typish = '*'

[project.scripts]
eg = 'electionguard_cli.start:cli'
egui = 'electionguard_gui.start:run'

[tool.black]
target-version = ['py39']

[tool.pylint.basic]
extension-pkg-whitelist = "pydantic"

[tool.pylint.format]
max-line-length = 120

# FIXME: Pylint should not require this many exceptions
[tool.pylint.messages_control]
disable = '''
  duplicate-code,
  fixme,
  invalid-name,
  missing-module-docstring,
  missing-function-docstring,
  no-value-for-parameter,
  redefined-builtin,
  broad-exception-raised,
  too-few-public-methods,
  too-many-arguments,
  too-many-branches,
  too-many-function-args,
  too-many-lines,
  too-many-locals,
  too-many-nested-blocks,
  too-many-positional-arguments,
  unnecessary-lambda,
  '''

[tool.coverage.run]
branch = true
source = ["src/electionguard"]

[tool.coverage.html]
directory = "coverage_html_report"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
show_column_numbers = true
